--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -73,6 +73,7 @@
   display: table-cell;
   vertical-align: top;
   width: 30px;
+   height: 30px;
   // set width only, for non-square avatars
   // height: 36px;
 
@@ -83,7 +84,7 @@
   }
 
   img {
-    max-width: 150px;
+    width: 300px;
     border-radius: 50%;
 
     @include breakpoint($large) {
