--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -72,8 +72,7 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 30px;
-   height: 30px;
+  width: 36px;
   // set width only, for non-square avatars
   // height: 36px;
 
@@ -84,7 +83,7 @@
   }
 
   img {
-    width: 300px;
+    max-width: 175px;
     border-radius: 50%;
 
     @include breakpoint($large) {
