--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -161,8 +161,8 @@
 }
 
 .page__hero-image {
-  width: 100%;
-  height: auto;
+  width: 150px;
+  height: 150px;
   -ms-interpolation-mode: bicubic;
 }
 
